--- a/tns-backed/.env
+++ b/tns-backed/.env
@@ -1,3 +1,4 @@
 require("dotenv").config();
 MONGO_URI=mongodb+srv://abdelaaziz:019020@cluster0.selrp.mongodb.net/tns-shop
 JWT_SECRET=secret_ecom
+mongodb+srv://abdelaaziz:<db_password>@cluster0.selrp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
